--- a/DomoticPi/DomoticPi.vcxproj
+++ b/DomoticPi/DomoticPi.vcxproj
@@ -42,7 +42,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <Link>
-      <LibraryDependencies>wiringPi;domoticPi;hap;pthread</LibraryDependencies>
+      <LibraryDependencies>wiringPi;domoticPi;hap;pthread;mosquitto</LibraryDependencies>
     </Link>
     <RemotePostBuildEvent>
       <Command>
@@ -53,7 +53,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <Link>
-      <LibraryDependencies>wiringPi;domoticPi;hap;pthread</LibraryDependencies>
+      <LibraryDependencies>wiringPi;domoticPi;hap;pthread;mosquitto</LibraryDependencies>
       <AdditionalLibraryDirectories>..\LibDomoticPi\bin\$(Platform)\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <RemotePostBuildEvent>
