--- a/DomoticPi/DomoticPi.vcxproj.filters
+++ b/DomoticPi/DomoticPi.vcxproj.filters
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <Filter Include="Headers">
       <UniqueIdentifier>{ac948a19-a956-47e7-a06a-d0e989e237ac}</UniqueIdentifier>
     </Filter>
@@ -13,5 +10,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="nodeConfig.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
