--- a/LibDomoticPi/LibDomoticPi.vcxproj.filters
+++ b/LibDomoticPi/LibDomoticPi.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="include\MqttLib.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="include\MqttInput.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="json-schema\Input.json">
@@ -149,6 +152,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="srcs\MqttLib.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="srcs\MqttInput.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
